# baseball

./: README.md  baseball.cabal
src/: Baseball.hs  Main.hs
tests/: Tests.hs
