name:                baseball
version:             0.1.0.0
synopsis:            Processing some csv data 
description:         Please see README.md
homepage:            https://github.com/chengzh2008/baseball#readme
license:             BSD3
license-file:        LICENSE
author:              Zhihong Cheng 
maintainer:          a@b.com
copyright:           2017 Zhihong Cheng
category:            Data 
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable baseball
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5,
                       baseball,
                       bytestring,
                       cassava
  default-language:    Haskell2010

library
  ghc-options:         -Wall
  exposed-modules:     Baseball
  build-depends:       base >= 4.7 && <5,
                       bytestring,
                       vector,
                       cassava
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      tests
  build-depends:       base,
                       baseball,
                       hspec 
  default-language:    Haskell2010
